# visualplayer

./: .gitignore  BLUEPRINT.md  CLAUDE.md  COPYING  Cargo.toml  LICENSE.md  README.ja.md  README.ko.md  README.md
.github/workflows/: build-android.yml  build-desktop.yml  ci.yml  release.yml  version.yml
app/android/: .gitignore  README.md  pubspec.yaml
app/android/lib/: main.dart
app/android/lib/src/: app.dart  equalizer.dart  home_screen.dart  i18n.dart  library.dart  player_controller.dart  player_screen.dart  settings.dart  settings_screen.dart
app/android/lib/src/core/: format.dart  i18n.dart  models.dart
app/android/lib/src/features/backup/: backup.dart
app/android/lib/src/features/bookmarks/: bookmarks.dart
app/android/lib/src/features/history/: history.dart
app/android/lib/src/features/home/: browse_tab.dart  home_screen.dart  home_shell.dart
app/android/lib/src/features/playback/: audio_handler.dart  launch.dart  options_sheet.dart  player_controller.dart  player_screen.dart
app/android/lib/src/features/playlist/: m3u.dart
app/android/lib/src/features/settings/: settings.dart  settings_screen.dart
app/ios/: README.md  project.yml
app/ios/VisualPlayer/: App.swift
app/ios/VisualPlayer/Core/: BookmarkStore.swift  LibraryStore.swift  MediaItem.swift  Theme.swift
app/ios/VisualPlayer/Features/Home/: ContentView.swift
app/ios/VisualPlayer/Features/Playback/: AVPlayerEngine.swift  BookmarksView.swift  NowPlayingController.swift  PlayerControls.swift  PlayerEngine.swift  PlayerViewModel.swift
app/ios/VisualPlayer/Features/Settings/: BackupService.swift  SettingsStore.swift  SettingsView.swift
app/ios/VisualPlayer/Features/Subtitles/: SubtitleFinder.swift
app/ios/VisualPlayer/Player/: AVPlayerEngine.swift  GestureLayer.swift  PlayerControls.swift  PlayerSurface.swift  VLCEngine.swift
app/ios/VisualPlayer/Playlist/: PlaylistView.swift
app/ios/VisualPlayer/Resources/: Info.plist  Localizable.xcstrings
app/ios/VisualPlayer/Services/: SourceResolver.swift
app/ios/VisualPlayer/Settings/: SettingsStore.swift  SettingsView.swift
app/main/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/main/src/: main.ts
app/main/src-tauri/: Cargo.toml  tauri.conf.json
app/main/src-tauri/capabilities/: default.json  desktop.json
app/main/src-tauri/icons/: icon.icns
app/main/src-tauri/lib/: README.md
app/main/src-tauri/src/: lib.rs  main.rs
app/main/src-tauri/src/assoc/: mod.rs
app/main/src-tauri/src/convert/: mod.rs
app/main/src-tauri/src/history/: mod.rs
app/main/src-tauri/src/net/: mod.rs
app/main/src-tauri/src/player/: mod.rs
app/main/src-tauri/src/playlist/: mod.rs
app/main/src-tauri/src/settings/: mod.rs
app/main/src-tauri/src/sidecar/: mod.rs
app/main/src-tauri/src/subtitle/: mod.rs
app/main/src-tauri/src/system/: mod.rs
app/main/src-tauri/src/tasks/: mod.rs
app/main/src-tauri/src/torrent/: mod.rs
app/main/src-tauri/src/whisper/: mod.rs
app/main/src/controllers/: playback.ts
app/main/src/features/abloop/: index.ts
app/main/src/features/chapters/: index.ts  store.ts
app/main/src/features/equalizer/: index.ts  store.ts
app/main/src/features/gestures/: index.ts
app/main/src/features/pip/: index.ts
app/main/src/features/shortcuts/: index.ts
app/main/src/features/video/: index.ts  store.ts
app/main/src/i18n/: index.ts
app/main/src/i18n/locales/: en.json  ja.json  ko.json
app/main/src/ipc/: env.ts  events.ts  index.ts  mpv.ts  transport.ts  types.ts
app/main/src/ipc/backends/: htmlVideo.ts  libmpv.ts
app/main/src/stores/: chapters.ts  equalizer.ts  history.ts  player.ts  playlist.ts  settings.ts  store.ts  tasks.ts  ui.ts  video.ts
app/main/src/styles/: base.css  components.css  tokens.css
app/main/src/ui/: appShell.ts  dom.ts  fullscreen.ts  gestureFeedback.ts  playerControls.ts  playlistPanel.ts  settingsPanel.ts  subtitleOverlay.ts  theme.ts  toast.ts  toolsPanel.ts
docs/: android-signing.md
installer/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
installer/src/: main.ts  style.css
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/payload/: README.md
installer/src-tauri/src/: install.rs  lib.rs  main.rs
licenses/: README.md
resources/: release.md
scripts/: android-signing.py  bump-version.mjs  flutter-android-compilesdk.py  flutter-android-mainactivity.py  flutter-android-manifest.py  flutter-android-signing.py
vp-core/: Cargo.toml
vp-core/src/: error.rs  formats.rs  history.rs  i18n.rs  lib.rs  m3u.rs  media.rs  playlist.rs  settings.rs  shortcuts.rs  subtitle.rs  torrent.rs
