# Workspace root: pure core crate (`vp-core`), the player Tauri app, and the
# standalone Tauri installer/uninstaller.
[workspace]
resolver = "2"
members = ["vp-core", "app/main/src-tauri", "installer/src-tauri"]

[workspace.package]
version = "2.0.3"
edition = "2021"
license = "Apache-2.0"
authors = ["starfect"]
repository = "https://github.com/starfect/visualplayer"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
