[package]
name = "vp-core"
description = "VisualPlayer pure core logic: errors, playlist, custom formats, subtitle discovery, settings, i18n codes. No Tauri/mpv dependencies."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints.clippy]
all = "warn"
