[package]
name = "visualplayer-installer"
description = "VisualPlayer installer/uninstaller — a real Tauri app (no NSIS)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "visualplayer-installer"

[lib]
name = "visualplayer_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "visualplayer-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vp-core = { path = "../../vp-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
winreg = "0.52"
