[package]
name = "visualplayer"
description = "VisualPlayer — non-profit cross-platform media player (Tauri shell)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "visualplayer"

# The library is the real entry point (shared with the mobile entry point); the
# binary is a thin wrapper. crate-types are required for Tauri mobile targets.
[lib]
name = "visualplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "visualplayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vp-core = { path = "../../../vp-core" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Optional, heavy native backends — compiled only when their feature is enabled
# so the default build and CI stay lean. Release builds opt in via `--features`.
librqbit = { version = "8", optional = true }
whisper-rs = { version = "0.16", optional = true }
ureq = { version = "2", optional = true }

# libmpv is the desktop playback engine; it has no mobile backend, so it is a
# desktop-only dependency. Android/iOS play through the WebView's native media
# pipeline (an HTML5 <video> transport on the frontend).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-libmpv = "0.3"

[features]
default = []
torrent = ["dep:librqbit"]
whisper = ["dep:whisper-rs", "dep:ureq"]
convert = []
